some dialogs use fixed widths that are too small if font size changes

--- a/src/static/css/asm.css
+++ b/src/static/css/asm.css
@@ -6,6 +6,14 @@ body {
     font-size: 75%;
 }
 
+/*
+@media screen and (min-width: 1824px) {
+    body {
+        font-size: 95%;
+    }
+}
+*/
+
 a {
     text-decoration: none;
 }
